added banner layout

--- a/index.html
+++ b/index.html
@@ -23,7 +23,30 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
-    <script src="nav.js"></script>
+    <div class="container center">
+        <div class="grid-container">
+            <div class="banner-header">
+                <h1>Akshay</h1>
+                <h2>A Full Stack Engineer</h2>
+            </div>
+            <div class="banner-content">
+                I love building stuff. Passionate about everything tech. Have a project in mind  or wanna collab on something? Just hit me up!
+            </div>
+            <div class="banner-cta">
+                <button>Portfolio</button>
+            </div>
+            <div class="banner-social">
+                <i>icon1</i>
+                <i>icon2</i>
+                <i>icon3</i>
+            </div>
+            <div class="banner-image">
+                <img id="my-pic" src="images/my-pic.jpg" />
+            </div>
+        </div>
+        
+    </div>
+        <script src="nav.js"></script>
     Hello guys
 </body>
 </html>
