--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container center">
         <div class="grid-container">
             <div class="banner-header">
-                <h1>Akshay</h1>
+                <h1 id="name-header">Akshay</h1>
                 <h2>A Full Stack Engineer</h2>
             </div>
             <div class="banner-content">
