--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 I love building stuff. Passionate about everything tech. Have a project in mind  or wanna collab on something? Just hit me up!
             </div>
             <div class="banner-cta">
-                <button>Portfolio</button>
+                <button id="cta-btn">Portfolio</button>
             </div>
             <div class="banner-social">
                 <i>icon1</i>
