--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Akshay</title>
 </head>
 <body>
-    <nav>
+    <nav id="navbar">
         <div id="navbar-logo">
             <h1>ak</h1>
         </div>
