almost finished banner

--- a/index.html
+++ b/index.html
@@ -30,15 +30,25 @@
                 <h2>A Full Stack Engineer</h2>
             </div>
             <div class="banner-content">
-                I love building stuff. Passionate about everything tech. Have a project in mind  or wanna collab on something? Just hit me up!
+                I love building stuff. <br />
+                Passionate about everything tech.  <br />
+                Have a project in mind  or wanna collab on something? Just hit me up!
             </div>
             <div class="banner-cta">
                 <button id="cta-btn">Portfolio</button>
             </div>
             <div class="banner-social">
-                <i>icon1</i>
-                <i>icon2</i>
-                <i>icon3</i>
+                <div id="social-icon-container">
+                    <div id="linkedin-logo" class="social-icon">
+                        <img src="images/linkedin-logo.svg" />
+                    </div>   
+                    <div id="github-logo" class="social-icon">
+                        <img src="images/github-logo.svg" />
+                    </div>   
+                    <div id="twitter-logo" class="social-icon">
+                        <img src="images/twitter-logo.svg" />
+                    </div>   
+                </div>
             </div>
             <div class="banner-image">
                 <img id="my-pic" src="images/my-pic.jpg" />
