finished skills section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <div class="container center">
-        <div id="grid-container-banner">
+        <div id="grid-container-banner" class="grid-container">
             <div class="banner-header">
                 <h1 id="name-header">Akshay</h1>
                 <h2>A Full Stack Engineer</h2>
@@ -59,7 +59,7 @@
                 My Skills
             </h1>
         </div>
-        <div id="grid-container-skills">
+        <div id="grid-container-skills" class="grid-container">
             <div class="scripting-auto">
                 <div id="grid-container-skill">
                     <div class="grid-logo">
