--- a/index.html
+++ b/index.html
@@ -107,6 +107,49 @@
                   </div>
             </div>
           </div>
+          <div class="center">
+            <h1 class="center">
+                My Journey
+            </h1>
+        </div>
+        <div id="grid-container-journey" class="grid-container">
+            <div class="grid-hasura">
+
+            </div>
+            <div class="empty1">
+
+            </div>
+            <div class="empty2">
+
+            </div>
+            <div class="grid-iit">
+
+            </div>
+            <div class="grid-zoho">
+
+            </div>
+            <div class="empty3">
+
+            </div>
+            <div class="empty4">
+
+            </div>
+            <div class="grid-tcs">
+
+            </div>
+            <div class="timeline1">
+
+            </div>
+            <div class="timeline2">
+
+            </div>
+            <div class="timeline3">
+
+            </div>
+            <div class="timeline4">
+                
+            </div>
+          </div>
     </div>
         <script src="nav.js"></script>
     Hello guys
