added journey section content

--- a/index.html
+++ b/index.html
@@ -112,9 +112,20 @@
                 My Journey
             </h1>
         </div>
-        <div id="grid-container-journey" class="grid-container">
+        <div id="grid-container-journeys" class="grid-container">
             <div class="grid-hasura">
-
+                <div class="grid-container-journey">
+                    <div class="grid-journey-logo"></div>
+                    <div class="grid-journey-header">
+                        <h2>Hasura Ltd</h2>
+                    </div>
+                    <div class="grid-journey-subheader">
+                        <h3>Dec 2017 - Feb 2018</h3>
+                    </div>
+                    <div class="grid-journey-content">
+                        Worked as a remote intern, developed fullstack application in React and NodeJS. Used Hasura platform for deployment.
+                    </div>
+                  </div>
             </div>
             <div class="empty1">
 
@@ -123,10 +134,33 @@
 
             </div>
             <div class="grid-iit">
-
+                <div class="grid-container-journey">
+                    <div class="grid-journey-logo"></div>
+                    <div class="grid-journey-header">
+                        <h2>IIT Madras</h2>
+                    </div>
+                    <div class="grid-journey-subheader">
+                        <h3>Aug 2018 - Apr 2019</h3>
+                    </div>
+                    <div class="grid-journey-content">
+                        Worked as a project intern, developed network monitoring scripts for security study
+                    </div>
+                  </div>
             </div>
             <div class="grid-zoho">
-
+                <div class="grid-container-journey">
+                    <div class="grid-journey-logo">
+                    </div>
+                    <div class="grid-journey-header">
+                        <h2>Zoho Corp</h2>
+                    </div>
+                    <div class="grid-journey-subheader">
+                        <h3>May 2018 - Jul 2018</h3>
+                    </div>
+                    <div class="grid-journey-content">
+                        Worked as a Java Developer, developing libraries for Mobile Device Management System.
+                    </div>
+                  </div>
             </div>
             <div class="empty3">
 
@@ -135,7 +169,18 @@
 
             </div>
             <div class="grid-tcs">
-
+                <div class="grid-container-journey">
+                    <div class="grid-journey-logo"></div>
+                    <div class="grid-journey-header">
+                        <h2>Tata Consultancy Services</h2>
+                    </div>
+                    <div class="grid-journey-subheader">
+                        <h3>May 2019 - Present</h3>
+                    </div>
+                    <div class="grid-journey-content">
+                        Currently a Machine Learning Engineer working on text based classification and intent recognition usecases.
+                    </div>
+                  </div>
             </div>
             <div class="timeline1">
 
