added timeline svg

--- a/index.html
+++ b/index.html
@@ -182,17 +182,17 @@
                     </div>
                   </div>
             </div>
-            <div class="timeline1">
-
+            <div class="timeline timeline1">
+                <img src="images/timeline.svg" alt="" srcset="">
             </div>
-            <div class="timeline2">
-
+            <div class="timeline timeline2">
+                <img src="images/timeline.svg" alt="" srcset="">
             </div>
-            <div class="timeline3">
-
+            <div class="timeline timeline3">
+                <img src="images/timeline.svg" alt="" srcset="">
             </div>
-            <div class="timeline4">
-                
+            <div class="timeline timeline4">
+                <img src="images/timeline.svg" alt="" srcset="">
             </div>
           </div>
     </div>
