--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
         <div id="grid-container-journeys" class="grid-container">
             <div class="grid-hasura">
                 <div class="grid-container-journey">
-                    <div class="grid-journey-logo"></div>
+                    <div class="grid-journey-logo">
+                        <img src="images/hasura-logo.svg" alt="" srcset="">
+                    </div>
                     <div class="grid-journey-header">
                         <h2>Hasura Ltd</h2>
                     </div>
@@ -135,7 +137,9 @@
             </div>
             <div class="grid-iit">
                 <div class="grid-container-journey">
-                    <div class="grid-journey-logo"></div>
+                    <div class="grid-journey-logo">
+                        <img src="images/iit-logo.svg" alt="" srcset="">
+                    </div>
                     <div class="grid-journey-header">
                         <h2>IIT Madras</h2>
                     </div>
@@ -150,6 +154,7 @@
             <div class="grid-zoho">
                 <div class="grid-container-journey">
                     <div class="grid-journey-logo">
+                        <img src="images/zoho-logo.svg" alt="" srcset="">
                     </div>
                     <div class="grid-journey-header">
                         <h2>Zoho Corp</h2>
@@ -170,7 +175,9 @@
             </div>
             <div class="grid-tcs">
                 <div class="grid-container-journey">
-                    <div class="grid-journey-logo"></div>
+                    <div class="grid-journey-logo">
+                        <img src="images/tcs-logo.svg" alt="" srcset="">
+                    </div>
                     <div class="grid-journey-header">
                         <h2>Tata Consultancy Services</h2>
                     </div>
@@ -183,16 +190,24 @@
                   </div>
             </div>
             <div class="timeline timeline1">
-                <img src="images/timeline.svg" alt="" srcset="">
+                <div class="center">
+                    <img src="images/timeline.svg" alt="" srcset="">
+                </div>
             </div>
             <div class="timeline timeline2">
-                <img src="images/timeline.svg" alt="" srcset="">
+                <div class="center">
+                    <img src="images/timeline.svg" alt="" srcset="">
+                </div>
             </div>
             <div class="timeline timeline3">
-                <img src="images/timeline.svg" alt="" srcset="">
+                <div class="center">
+                    <img src="images/timeline.svg" alt="" srcset="">
+                </div>
             </div>
             <div class="timeline timeline4">
-                <img src="images/timeline.svg" alt="" srcset="">
+                <div class="center">
+                    <img src="images/timeline.svg" alt="" srcset="">
+                </div>
             </div>
           </div>
     </div>
