completed desktop version

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="banner-image">
-                <img id="my-pic" src="images/my-pic.jpg" />
+                <img id="my-pic" src="images/my-pic.png" />
             </div>
         </div>
         <div class="center">
@@ -212,6 +212,6 @@
           </div>
     </div>
         <script src="nav.js"></script>
-    Hello guys
+    <div class="center"><span class="footer-style">&#169; 2021 All Rights Reserved</span></div>
 </body>
 </html>
