worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="grid-container-banner" class="grid-container">
             <div class="banner-header">
                 <h1 id="name-header">Akshay</h1>
-                <h2>A Full Stack Engineer</h2>
+                <h2 id="role-header">A Full Stack Engineer</h2>
             </div>
             <div class="banner-content">
                 I love building stuff. <br />
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="center">
-            <h1 class="center">
+            <h1 class="center section-header">
                 My Skills
             </h1>
         </div>
@@ -108,7 +108,7 @@
             </div>
           </div>
           <div class="center">
-            <h1 class="center">
+            <h1 class="center section-header">
                 My Journey
             </h1>
         </div>
