added links to cta and social buttons

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
                 Have a project in mind  or wanna collab on something? Just hit me up!
             </div>
             <div class="banner-cta">
-                <button id="cta-btn">Portfolio</button>
+                <a id="cta-btn" href="#work-section">Portfolio</a>
             </div>
             <div class="banner-social">
                 <div id="social-icon-container">
-                    <div id="linkedin-logo" class="social-icon">
+                    <a id="linkedin-logo" class="social-icon" href="https://www.linkedin.com/in/akshay-raman-70188a165/" target="_blank">
                         <img src="images/linkedin-logo.svg" />
-                    </div>   
-                    <div id="github-logo" class="social-icon">
+                    </a>   
+                    <a id="github-logo" class="social-icon" href="https://github.com/akshay-r13" target="_blank">
                         <img src="images/github-logo.svg" />
-                    </div>   
-                    <div id="twitter-logo" class="social-icon">
+                    </a>   
+                    <a id="twitter-logo" class="social-icon" href="https://twitter.com/AkshayRaman_" target="_blank">
                         <img src="images/twitter-logo.svg" />
-                    </div>   
+                    </a>   
                 </div>
             </div>
             <div class="banner-image">
